# lobgpt

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/data/: btc_usdt.yaml
configs/model/: lob_transformer_base.yaml  lob_transformer_small.yaml
configs/sweep/: grid_search.yaml  optuna_sweep.yaml
configs/tokenizer/: default.yaml
configs/training/: default.yaml
data/lobster/processed/: AAPL_2012-06-21_messages.parquet
docs/: lob.md  lob_tokenization.md  optimization.md  transformer_lob_architecture.md
examples/: dataloading.ipynb  evaluate_lob_transformer.py  hftback.ipynb  lobster_data_example.py  process_snapshot.py  test_book_reconstruction.py  test_deeplob_format.py  test_pytorch_dataset.py  tokenize_lob_events.py  train_lob_transformer.py
scripts/: analyze_results.py  hyperparameter_search.py  run_grid_search.py  train_with_config.py
src/lobgpt/: __init__.py  book_state.py  data_pipeline.py  data_transforms.py  dataset.py  inference.py  preprocessing.py  pytorch_dataset.py  tokenizer.py  visualization.py
src/lobgpt/evaluation/: metrics.py  visualization.py
src/lobgpt/hdb/: __init__.py  base.py  build_snapshot.py  config.py  lobster_dataloader.py  mic_dataloader.py  registry.py  tardis_dataloader.py  utils.py
src/lobgpt/inference/: generator.py
src/lobgpt/models/: deeplob.py  lob_transformer.py
src/lobgpt/training/: lob_trainer.py
src/lobgpt/utils/: polars_extensions.py  time.py
